fixed spacing

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -152,12 +152,12 @@
 
     /* Discover Page */
     #discovermain {
-        margin: 20px 50px;
+        margin: 10px 50px;
     }
     .discoverbody {
         display: grid;
         grid-template-columns: 300px auto;
-        grid-gap: 20px;
+        grid-gap: 60px;
         margin: auto;
     }
     .text {
